--- a/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 3/Main.xaml
+++ b/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 3/Main.xaml
@@ -87,6 +87,11 @@
       <AssemblyReference>WindowsBase</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
+  <sap:WorkflowViewStateService.ViewState>
+    <scg:Dictionary x:TypeArguments="x:String, x:Object">
+      <x:Boolean x:Key="ShouldExpandAll">True</x:Boolean>
+    </scg:Dictionary>
+  </sap:WorkflowViewStateService.ViewState>
   <Sequence sap2010:Annotation.AnnotationText="Wrting current Date and time in the text Document&#xA;" DisplayName="Current Date and time" sap:VirtualizedContainerService.HintSize="496,3746.4" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="s:DateTime" Name="Datetime" />
@@ -263,7 +268,7 @@
     <ui:AppendLine File="{x:Null}" DisplayName="Short time Append " FileName="Date.txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="AppendLine_4" Text="[Short_time]" UseDefaultEncoding="False" />
     <ui:AppendLine File="{x:Null}" DisplayName="String date Append " FileName="Date.txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="AppendLine_5" Text="[String_datetime]" UseDefaultEncoding="False" />
     <ui:AppendLine File="{x:Null}" DisplayName="Date ddd Append " FileName="Date.txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="AppendLine_6" Text="[Date_ddd]" UseDefaultEncoding="False" />
-    <ui:AppendLine File="{x:Null}" DisplayName="Datet dddd Append" FileName="Date.txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="AppendLine_7" Text="[Date_dddd]" UseDefaultEncoding="False" />
+    <ui:AppendLine File="{x:Null}" DisplayName="Date dddd Append" FileName="Date.txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="AppendLine_7" Text="[Date_dddd]" UseDefaultEncoding="False" />
     <ui:AppendLine File="{x:Null}" DisplayName="Time tt Append " FileName="Date.txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="AppendLine_8" Text="[Time_tt]" UseDefaultEncoding="False" />
     <ui:AppendLine File="{x:Null}" DisplayName="Year Append" FileName="Date.txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="AppendLine_9" Text="[Year_yyyy]" UseDefaultEncoding="False" />
     <ui:AppendLine File="{x:Null}" DisplayName="year yy Append " FileName="Date.txt" sap:VirtualizedContainerService.HintSize="433.6,134.4" sap2010:WorkflowViewState.IdRef="AppendLine_10" Text="[year_yy]" UseDefaultEncoding="False" />
