--- a/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 5/Main.xaml
+++ b/SourceCode/2023/Oct2023/Basics/Khantil Desai/Task 5/Main.xaml
@@ -60,13 +60,13 @@
       <AssemblyReference>System.Runtime.Serialization.Primitives</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="Main Sequence" sap:VirtualizedContainerService.HintSize="923.2,748.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="Task 5" sap:VirtualizedContainerService.HintSize="923.2,748.8" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <sap:WorkflowViewStateService.ViewState>
       <scg:Dictionary x:TypeArguments="x:String, x:Object">
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <Flowchart DisplayName="Flowchart" sap:VirtualizedContainerService.HintSize="860.8,636.8" sap2010:WorkflowViewState.IdRef="Flowchart_1">
+    <Flowchart DisplayName="Task 5 Flowchart" sap:VirtualizedContainerService.HintSize="860.8,636.8" sap2010:WorkflowViewState.IdRef="Flowchart_1">
       <Flowchart.Variables>
         <Variable x:TypeArguments="ui:GenericValue" Name="Int" />
         <Variable x:TypeArguments="ui:GenericValue" Name="Str" />
@@ -92,7 +92,7 @@
             <av:PointCollection x:Key="ConnectorLocation">300,240.5 300,259.29999999999995</av:PointCollection>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
-        <Assign sap2010:Annotation.AnnotationText="Assigning int value in generic Value" sap:VirtualizedContainerService.HintSize="433.6,112.8" sap2010:WorkflowViewState.IdRef="Assign_1">
+        <Assign sap2010:Annotation.AnnotationText="Assigning int value in generic Value" DisplayName="Int num Assign" sap:VirtualizedContainerService.HintSize="433.6,112.8" sap2010:WorkflowViewState.IdRef="Assign_1">
           <Assign.To>
             <OutArgument x:TypeArguments="ui:GenericValue">[Int]</OutArgument>
           </Assign.To>
@@ -115,7 +115,7 @@
                 <av:PointCollection x:Key="ConnectorLocation">300,372.09999999999997 300,390.9</av:PointCollection>
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
-            <Assign sap2010:Annotation.AnnotationText="Assigning string value in generic Value" sap:VirtualizedContainerService.HintSize="433.6,112.8" sap2010:WorkflowViewState.IdRef="Assign_2">
+            <Assign sap2010:Annotation.AnnotationText="Assigning string value in generic Value" DisplayName="String num Assign" sap:VirtualizedContainerService.HintSize="433.6,112.8" sap2010:WorkflowViewState.IdRef="Assign_2">
               <Assign.To>
                 <OutArgument x:TypeArguments="ui:GenericValue">[Str]</OutArgument>
               </Assign.To>
@@ -138,7 +138,7 @@
                     <av:PointCollection x:Key="ConnectorLocation">300,503.7 300,522.5</av:PointCollection>
                   </scg:Dictionary>
                 </sap:WorkflowViewStateService.ViewState>
-                <Assign sap2010:Annotation.AnnotationText="Get a result in the generic value variable" sap:VirtualizedContainerService.HintSize="433.6,112.8" sap2010:WorkflowViewState.IdRef="Assign_3">
+                <Assign sap2010:Annotation.AnnotationText="Get a result in the generic value variable" DisplayName="Result Assign" sap:VirtualizedContainerService.HintSize="433.6,112.8" sap2010:WorkflowViewState.IdRef="Assign_3">
                   <Assign.To>
                     <OutArgument x:TypeArguments="x:String">[Result]</OutArgument>
                   </Assign.To>
@@ -160,7 +160,7 @@
                         <av:Size x:Key="ShapeSize">200,52.8</av:Size>
                       </scg:Dictionary>
                     </sap:WorkflowViewStateService.ViewState>
-                    <WriteLine DisplayName="Result" sap:VirtualizedContainerService.HintSize="200,52.8" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[Result.ToString]">
+                    <WriteLine DisplayName="Result" sap:VirtualizedContainerService.HintSize="334.4,90.4" sap2010:WorkflowViewState.IdRef="WriteLine_1" Text="[Result.ToString]">
                       <sap:WorkflowViewStateService.ViewState>
                         <scg:Dictionary x:TypeArguments="x:String, x:Object">
                           <x:Boolean x:Key="IsExpanded">True</x:Boolean>
